code: created make file and working on deployment
