# src/swagger-doc.json
@@ -2,8 +2,8 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "SOF Exam Server",
-    "description": "This server will hold the exam question sheets as well as calculate the score and also habdle the examinatino through the portal"
+    "title": "REST API",
+    "description": ""
   },
   "host": "http://localhost:{port}/api/v1",
   "basePath": "/",
@@ -11,9 +11,9 @@
     "http"
   ],
   "paths": {
-    "/admin/create-user?a_email={admin_email}&a_pass={admin_password}": {
+    "/create-user": {
       "post": {
-        "description": "This endpoint is for generating credentials for the students and this will automatically send the emails to their email too",
+        "description": "",
         "parameters": [
           {
             "name": "body",
@@ -22,10 +22,16 @@
               "type": "object",
               "properties": {
                 "name": {
-                  "example": "Piush Bose"
+                  "example": "any"
                 },
                 "email": {
-                  "example": "piush@gmail.com"
+                  "example": "any"
+                },
+                "dept": {
+                  "example": "any"
+                },
+                "section": {
+                  "example": "any"
                 }
               }
             }
@@ -33,27 +39,27 @@
         ],
         "responses": {
           "200": {
-            "description": "This means the credentials has been created and also the emails are also sent to their emails"
+            "description": "OK"
           },
           "400": {
-            "description": "This means the user with the provided email already exists on the database"
+            "description": "Bad Request"
           },
           "401": {
-            "description": "This means the admin creds provided through the query params are invalid"
+            "description": "Unauthorized"
           },
           "402": {
-            "description": "Attendee email is reauired in the request body"
+            "description": "Payment Required"
           },
           "500": {
-            "description": "Internal Server Error, while saving the details in the database"
+            "description": "Internal Server Error"
           },
           "501": {
-            "description": "Can't generate the password for the attendee"
+            "description": "Not Implemented"
           }
         }
       }
     },
-    "/admin/create-exam": {
+    "/create-exam": {
       "post": {
         "description": "",
         "parameters": [
@@ -77,6 +83,12 @@
                 },
                 "subTopics": {
                   "example": "any"
+                },
+                "totalMarks": {
+                  "example": "any"
+                },
+                "marksPerQuestion": {
+                  "example": "any"
                 }
               }
             }
@@ -98,7 +110,7 @@
         }
       }
     },
-    "/admin/create-question": {
+    "/create-question": {
       "post": {
         "description": "",
         "responses": {
@@ -114,17 +126,91 @@
         }
       }
     },
-    "/exam/submit-exam": {
+    "/increase-attempts/{user_id}": {
       "post": {
         "description": "",
+        "parameters": [
+          {
+            "name": "user_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "amt": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "402": {
+            "description": "Payment Required"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       }
     },
-    "/exam/get-submissions/{student_id}": {
+    "/submit-exam/{exam_id}": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "exam_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "response": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "402": {
+            "description": "Payment Required"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/get-submissions/{student_id}": {
       "get": {
         "description": "",
         "parameters": [
@@ -136,13 +222,19 @@
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       }
     },
-    "/questions/get-all/{examId}": {
+    "/get-all/{examId}": {
       "get": {
         "description": "",
         "parameters": [
@@ -166,7 +258,7 @@
         }
       }
     },
-    "/user/login": {
+    "/login": {
       "post": {
         "description": "",
         "parameters": [
@@ -192,11 +284,14 @@
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "501": {
+            "description": "Not Implemented"
           }
         }
       }
     },
-    "/users/{id}": {
+    "/{id}": {
       "get": {
         "description": "",
         "parameters": [
@@ -213,6 +308,48 @@
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/decrease-attempts": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "a_email",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "a_pass",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "501": {
+            "description": "Not Implemented"
           }
         }
       }
